--- a/templates/base.html
+++ b/templates/base.html
@@ -5,17 +5,24 @@
         <title>strava-distance-search</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
         <link href="{% static "styles/style.css" %}" type="text/css" rel="stylesheet"/>
-
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+        <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" type="text/css" rel="stylesheet" />
         {% block head %}
         {% endblock %}
     </head>
     <body>
         {% if user.is_authenticated %}
         <div class="navbar">
-            <div class="navbar-menu">  
-                <div class="navbar-brand">
-                    <p class="navbar-item">strava-distance-search</p>
-                </div>                               
+            <div class="navbar-brand">
+                <p class="navbar-item">strava-distance-search</p>
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+            <div class="navbar-menu">                        
                 <div class="navbar-end">
                     <a class="navbar-item" href="{% url "account_logout" %}">Logout</a>
                 </div>
@@ -33,5 +40,13 @@
                 <img id="stravaFooter" src="{% static "images/api_logo_pwrdBy_strava_horiz_light.png" %}" alt="Powered By Strava">
             </div>
         </footer>
+        <script>
+            $(document).ready(function() {
+                $(".navbar-burger").click(function() {
+                    $(".navbar-burger").toggleClass("is-active");
+                    $(".navbar-menu").toggleClass("is-active");
+                });
+            });
+        </script>
     </body>
 </html>
