--- a/templates/base.html
+++ b/templates/base.html
@@ -49,5 +49,10 @@
                 });
             });
         </script>
+        <script src="https://getinsights.io/static/js/insights.js"></script>
+        <script>
+            insights.init('fjcwV2KImYt2Aq5S');
+            insights.trackPages();
+        </script>
     </body>
 </html>
