Fix label alignment

--- a/templates/home.html
+++ b/templates/home.html
@@ -114,7 +114,7 @@
                                         <div className="control">
                                             <input className="input" type="number" id="maxDistance" name="maxDistance" min="0" max="10" value={this.state.maxDistance} onChange={this.handleChange} />    
                                         </div>
-                                        <label className="label is-pulled-right">Max Distance</label>
+                                        <label className="label has-text-right">Max Distance</label>
                                     </div>
                                 </div>                        
                             </div>
